--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a
                   class="header__link header__link--current link-reset"
                   href="./index.html"
-                  >Studio</a
+                  >Agencja</a
                 >
               </li>
 
