--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
             <ul class="header__list list-reset">
               <li class="header__item">
                 <a class="header__link link-reset" href="./index.html"
-                  >Studio</a
+                  >Agencja</a
                 >
               </li>
 
@@ -716,7 +716,7 @@
         <div class="mobile__container">
           <ul class="mobile__list list-reset">
             <li class="mobile__item">
-              <a class="mobile__link link-reset" href="./index.html">Studio</a>
+              <a class="mobile__link link-reset" href="./index.html">Agencja</a>
             </li>
 
             <li class="mobile__item">
