--- a/index.html
+++ b/index.html
@@ -674,10 +674,7 @@
                 <ul class="footer__list list-reset">
                   <li class="footer__item">
                     <a
-                      class="footer__info footer__info--address link-reset"
-                      href="https://goo.gl/maps/jzjgvNHyo2qF3V4f9"
-                      target="_blank"
-                      rel="noopener noreferrer"
+                      class="footer__info--address link-reset"
                       >m. Warszawa, Aleje Jerozolimskie 21</a
                     >
                   </li>
